--- a/ld/Makefile.am
+++ b/ld/Makefile.am
@@ -314,6 +314,7 @@ ALL_EMULATION_SOURCES = \
 	ei386nto.c \
 	ei386pe.c \
 	ei386pe_posix.c \
+	elr35902.c \
 	em32relf.c \
 	em32relf_linux.c \
 	em32rlelf.c \
@@ -1398,6 +1399,9 @@ ei386pe_posix.c: $(srcdir)/emulparams/i386pe_posix.sh \
 
 ei386pep.c: $(srcdir)/emulparams/i386pep.sh \
   $(srcdir)/emultempl/pep.em $(srcdir)/scripttempl/pep.sc ${GEN_DEPENDS}
+
+elr35902.c: $(srcdir)/emulparams/lr35902.sh \
+  $(srcdir)/emultempl/generic.em $(srcdir)/scripttempl/lr35902.sc ${GEN_DEPENDS}
 
 em32relf.c: $(srcdir)/emulparams/m32relf.sh \
   $(ELF_DEPS) $(srcdir)/scripttempl/elf.sc ${GEN_DEPENDS}
