--- a/opcodes/Makefile.am
+++ b/opcodes/Makefile.am
@@ -156,6 +156,7 @@ TARGET_LIBOPCODES_CFILES = \
 	lm32-ibld.c \
 	lm32-opc.c \
 	lm32-opinst.c \
+	lr35902-dis.c \
 	m10200-dis.c \
 	m10200-opc.c \
 	m10300-dis.c \
